--- a/vignettes/Data_formats.Rmd
+++ b/vignettes/Data_formats.Rmd
@@ -21,14 +21,15 @@ We include a dataset of plant annual species, for which their per capita fecundi
 The table for competition is
 
 ```{r}
+library(cxr)
 data("competition", package = "cxr")
 ```
 
-its structure is as follows: for each observation of a focal individual, the date is recorded, alongside the plot and subplot where the observation was made. Finally, we include the number of fruits and seeds of that particular individual, and how many neighbours (competitors) of each species were in its surroundings (taken as a circunference of radius 7.5 cm).
+its structure is as follows: for each observation of a focal individual, the sampling date is recorded, alongside the plot and subplot where the observation was made. Finally, we include the number of fruits and seeds of that particular individual, a unique identifier for each individual, and how many neighbours (competitors) of each species were in its surroundings (taken as a circunference of radius 7.5 cm). Note that this dataset is stored in a long format, so that each row corresponds to a combination of focal individual and competitor species. The dataset also explicitly accounts for unobserved focal-competitor pairs, such that competitor species not present in the neighbourhood of a given focal individual are included with `number` = 0. 
 
 ```{r}
 ?competition
-head(competition) #fruit and seed are then duplicated... suboptimal. Add individual.
+head(competition)
 ```
 
 The abundance table is also stored in a long format, in which we give, for each plot and subplot, the number of individuals of each species at their developmental peak:
@@ -38,14 +39,14 @@ data("abundance", package = "cxr")
 head(abundance)
 ```
 
-We also include seed survival and germination rates for each species, obtained independently:
+We also provide seed survival and germination rates for each species, obtained independently. This file also includes the complete scientific name and abbreviation of each species. In subsequent analyses and vignettes we use the abbreviation as species identifier.
 
 ```{r}
 data("species_rates", package = "cxr")
-species_rates #names in latin should be capitalized?
+species_rates
 ```
 
-and the values of an environmental covariate, salinity, for each sampling unit:
+Lastly, we provide the values of an environmental covariate, salinity, for each sampling unit:
 
 ```{r}
 data("salinity", package = "cxr")
@@ -54,21 +55,31 @@ head(salinity)
 
 The package also includes data on floral visitors (`pollinators`), but this data is not used in the vignettes.
 
-In the package there are, broadly speaking, two types of functions. 1) `cxr_optimize`, which fits the species interaction models to empirical data and 2) `ER_optimize`, which fits overall response and effect parameters per focal species to empirical data. Both `cxr_optimize` and `ER_optimize` accept field data and numerically estimate parameters of a model provided by the user. On the other hand, other functions (`AvgFitnessRatio`, `NicheOverlap`, or `CompetitiveAbility`) take these estimates and return coexistence metrics for a single species or pairs of them.
+**CXR functionality**
+
+In the package there are, broadly speaking, two types of functions. The first set (optimization functions) includes `cxr_optimize`, which fits the species interaction models to empirical data, and `ER_optimize`, which fits overall response and effect parameters per focal species to empirical data. Both `cxr_optimize` and `ER_optimize` accept field data and numerically estimate parameters of a model provided by the user. The second set (coexistence functions, including `AvgFitnessRatio`, `NicheOverlap`, and `CompetitiveAbility`) take these estimates and return coexistence metrics for a single species or pairs of them.
 
 **Data for optimization functions**
 
+```{r}
+?cxr_optimize
+```
+
 The data to provide to `cxr_optimize` is the fitness metric (log-transformed) of each observation, and the number of competitors of each species (in matrix format) for each observation. Thus, the length of `log.fitness` and the number of rows of `focal.comp.matrix` must match. Likewise, if covariates are provided, the number of rows of that covariates matrix/dataframe must also match the number of observations. This requires some data formating to create the `focal.comp.matrix`.
 
-The data for `ER_optimize` is slightly different, since in this function, an indeterminate number of species are fit at once. Aside from the initial values of the different parameters and their bounds, the main argument is `sp.data`. It should be a dataframe with columns: `site`, `focal`, `fitness`, `competitor`, `number`. This format is mostly equivalent to the one of our competition dataset, but be aware of two particularities: 1) in this function (unlike in `cxr_optimize`) the set of focal species must equal the set of competitor species. 2) the missing focal-competitor pairs must be explicitly set to zero in the dataset. These constraints are due to the parallel nature of the parameter estimation.
+```{r}
+?ER_optimize
+```
 
-**Data for coexistence metrics**
+The data for `ER_optimize` is slightly different, since in this function, an indeterminate number of species are fit at once. Aside from the initial values of the different parameters and their bounds, the main argument is `sp.data`. This should be a dataframe with columns: `site`, `focal`, `fitness`, `competitor`, `number`. This format is mostly equivalent to the one of our competition dataset, but be aware of two particularities: 1) in this function (unlike in `cxr_optimize`) the set of focal species must equal the set of competitor species. 2) missing focal-competitor pairs must be explicitly set to zero in the dataset. These constraints are due to the parallel nature of the parameter estimation.
+
+**Data for coexistence functions**
 
 The coexistence functions `AvgFitnessRatio`, `NicheOverlap`, and `CompetitiveAbility` accept, simply, pairwise interaction coefficients, and eventually, other parameters such as per capita fecundities in the absence of competition ($\lambda$), or competitive responses $r$. These metrics can be obtained with the output from `cxr_optimize` or `ER_optimize` or, in turn, with independent estimates.
 
 **Population dynamics models**
 
-The cxr package provides users with a flexible interface to fit their own models and data, and at the same time incorporates state-of-the-art dynamic models for annual plant populations. The five models included in the package (functions `BH_1` to `BH_5`) estimate the per-germinant fecundity $F_i$ of a plant individual, in the context of an annual plant model with seed bank:
+The `cxr` package provides users with a flexible interface to fit their own models and data, and at the same time incorporates state-of-the-art dynamic models for annual plant populations. The five models included in the package (functions `BH_1` to `BH_5`) estimate the per-germinant fecundity $F_i$ of a plant individual, in the context of an annual plant model with seed bank:
 
 $$N_{i,t+1}^s/N_{i,t}^s = (1-g_{i})s_i + g_iF_i$$
 
@@ -94,4 +105,4 @@ A complementary set of two models is also provided, that estimate competitive ef
 
 $$F_i = \frac{\lambda_i}{1+r_i \sum_j^n e_j N_j^a}$$
 
-where $r_i$ is the species’ competitive response and $e_i$ is the species’ competitive effect; our models only differ on whether is taken as a fixed parameter (function `EffectResponse.R`) or is optimized as well in the routine (function `EffectResponse_lambda.R`).[move up?]
+where $r_i$ is the species’ competitive response and $e_i$ is the species’ competitive effect; our models only differ on whether $\lambda$ is taken as a fixed parameter (function `EffectResponse.R`) or is optimized as well in the routine (function `EffectResponse_lambda.R`).
